# signus

./: .gitignore  README.cs.md  README.md  signus-9999.ebuild
signus/: AUTHORS  Makefile.am  Makefile.in  README.txt  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  signus.iss  signus.spec
signus-data/: AUTHORS  Makefile.am  Makefile.in  autogen.sh  configure.ac  configure.in  signus-data.spec
signus-data/data/: Makefile.am  Makefile.in
signus-data/data/cs/: Makefile.am  Makefile.in  README-cs.txt
signus-data/data/cs/anims/: Makefile.am
signus-data/data/cs/graphics/: Makefile.am  Makefile.in
signus-data/data/cs/speech/: Makefile.am  Makefile.in
signus-data/data/cs/texts/: Makefile.am  Makefile.in  b10_001.txt  b11_001.txt  b12_001.txt  b13_001.txt  b14_001.txt  b15_001.txt  b16_001.txt  b17_001.txt  b18_001.txt  b19_001.txt  br1_001.txt  br1_002.txt  br2_001.txt  br4_001.txt  br5_001.txt  br6_001.txt  br7_001.txt  br8_001.txt  br9_001.txt  brief1.txt  brief10.txt  brief11.txt  brief12.txt  brief13.txt  brief14.txt  brief15.txt  brief16.txt  brief17.txt  brief18.txt  brief19.txt  brief2.txt  brief3.txt  brief4.txt  brief5.txt  brief6.txt  brief7.txt  brief8.txt  brief9.txt  (+254 more)
signus-data/data/en/: Makefile.am  Makefile.in
signus-data/data/en/anims/: Makefile.am
signus-data/data/en/graphics/: Makefile.am  Makefile.in
signus-data/data/en/speech/: Makefile.am  Makefile.in
signus-data/data/en/texts/: Makefile.am  Makefile.in  b10_001.txt  b11_001.txt  b12_001.txt  b13_001.txt  b14_001.txt  b15_001.txt  b16_001.txt  b17_001.txt  b18_001.txt  b19_001.txt  br1_001.txt  br1_002.txt  br2_001.txt  br4_001.txt  br5_001.txt  br6_001.txt  br7_001.txt  br8_001.txt  br9_001.txt  brief1.txt  brief10.txt  brief11.txt  brief12.txt  brief13.txt  brief14.txt  brief15.txt  brief16.txt  brief17.txt  brief18.txt  brief19.txt  brief2.txt  brief3.txt  brief4.txt  brief5.txt  brief6.txt  brief7.txt  brief8.txt  brief9.txt  (+255 more)
signus-data/data/nolang/: Makefile.am  Makefile.in  unitsnd.idx
signus-data/data/nolang/anims/: Makefile.am
signus-data/data/nolang/fonts/: Makefile.am  Makefile.in
signus-data/data/nolang/graphics/: Makefile.am  Makefile.in  menupal.col  palette.col  paletted.tab  paletteg.tab  scrpal.col
signus-data/data/nolang/graphics/sprites-misc/: dym0_1.spr.hotspot  dym0_15.spr.hotspot  dym0_16.spr.hotspot  dym0_17.spr.hotspot  dym0_18.spr.hotspot  dym0_2.spr.hotspot  dym0_20.spr.hotspot  dym0_21.spr.hotspot  dym0_24.spr.hotspot  dym0_25.spr.hotspot  dym0_27.spr.hotspot  dym0_29.spr.hotspot  dym0_31.spr.hotspot  dym0_5.spr.hotspot  dym0_6.spr.hotspot  dym0_8.spr.hotspot  dym0_9.spr.hotspot  expa0_3.spr.hotspot  expa1_3.spr.hotspot  expa1_4.spr.hotspot  expa1_5.spr.hotspot  expa3_1.spr.hotspot  expa3_3.spr.hotspot  expa3_4.spr.hotspot  expa3_5.spr.hotspot  expa3_6.spr.hotspot  expa3_7.spr.hotspot  expa4_1.spr.hotspot  expa4_7.spr.hotspot  expa5_5.spr.hotspot  expa5_6.spr.hotspot  expa5_7.spr.hotspot  expa6_4.spr.hotspot  expa7_0.spr.hotspot  expa7_2.spr.hotspot  expa7_7.spr.hotspot  expb0_0.spr.hotspot  expb0_1.spr.hotspot  expb0_2.spr.hotspot  expb0_3.spr.hotspot  (+44 more)
signus-data/data/nolang/graphics/sprites-terrain/: tr2d256.spr.hotspot  tr2d258.spr.hotspot  tr2d261.spr.hotspot  tr2d264.spr.hotspot  tr2d267.spr.hotspot  tr2d278.spr.hotspot  tr2d287.spr.hotspot  tr2d323.spr.hotspot  tr2d325.spr.hotspot  tr2d326.spr.hotspot  tr2d431.spr.hotspot  tr2d432.spr.hotspot  tr2d436.spr.hotspot  (+30 more)
signus-data/data/nolang/missions/: Makefile.am  Makefile.in  mis10e.mis  mis10h.mis  mis10n.mis  mis11e.mis  mis11h.mis  mis11n.mis  mis12e.mis  mis12h.mis  mis12n.mis  mis13e.mis  mis13h.mis  mis13n.mis  mis14e.mis  mis14h.mis  mis14n.mis  mis15e.mis  mis15h.mis  mis15n.mis  mis16e.mis  mis16h.mis  mis16n.mis  mis17e.mis  mis17h.mis  mis17n.mis  mis18e.mis  mis18h.mis  mis18n.mis  mis19e.mis  mis19h.mis  mis19n.mis  mis1e.mis  mis1h.mis  mis1n.mis  mis2e.mis  mis2h.mis  mis2n.mis  mis3e.mis  mis3h.mis  (+19 more)
signus-data/data/nolang/music/: Makefile.am  Makefile.in
signus-data/data/nolang/sfx/: Makefile.am  Makefile.in
signus-data/utils/: Makefile.am  Makefile.in  datafile.cpp  datafile.h  fntmng.cpp  fonts.cpp  fonts.h  makedat.cpp  mk_rgb2pal.c  stream.cpp  system.h
signus/SDL_mixer-1.2.4-patched/: Makefile.am  Makefile.in  README.Signus  SDL_mixer.spec  aclocal.m4  configure  configure.in  mixer.c
signus/SDL_mixer-1.2.4-patched/mikmod/: Makefile.am  Makefile.in
signus/etc/: default_signus.ini
signus/freedesktop/: io.github.signus_game.signus.metainfo.xml
signus/iniparser/: INSTALL  Makefile.am  Makefile.in
signus/iniparser/html/: General.html  Installationinstructions.html  ReferenceManual.html  index.html  iniparser_dump.html  iniparser_dump_lua.html  iniparser_find_entry.html  iniparser_freedict.html  iniparser_getboolean.html  iniparser_getdouble.html  iniparser_getint.html  iniparser_getstr.html  iniparser_load.html  iniparser_setstr.html  toc.html
signus/iniparser/src/: dictionary.c  dictionary.h  e_error.c  e_error.h  iniparser.c  iniparser.h  strlib.c  strlib.h
signus/iniparser/test/: initest.c
signus/sdlimage/: IMG.c  IMG_jpg.c  Makefile.am  Makefile.in  README  miniSDL_image.h
signus/src/: Makefile.am  Makefile.in  anims.cpp  anims.h  autofire.cpp  autofire.h  briefing.cpp  briefing.h  building.cpp  building.h  c32.mac  consts.h  datafile.cpp  datafile.h  eng800.cpp  eng800.h  engdraw_g_1.cpp  engdraw_g_2.cpp  engdraw_x86.asm  engdraw_x86_1.asm  engdraw_x86_2.asm  engine.cpp  engine.h  engtimer.cpp  engtimer.h  etab_ai.cpp  etab_drw.cpp  etab_mov.cpp  etables.cpp  etables.h  events.cpp  events.h  explode.cpp  explode.h  fields.cpp  fields.h  fonts.cpp  fonts.h  global.cpp  global.h  (+67 more)
signus/src/ai/: ai.cpp  ai.h  ai1.cpp  ai10.cpp  ai11.cpp  ai12.cpp  ai13.cpp  ai14.cpp  ai15.cpp  ai16.cpp  ai17.cpp  ai18.cpp  ai19.cpp  ai2.cpp  ai3.cpp  ai4.cpp  ai5.cpp  ai6.cpp  ai7.cpp  ai8.cpp  ai9.cpp  aiair.cpp  aiair.h  aiglobal.cpp  aiglobal.h  aiground.cpp  aiground.h  aimarine.cpp  aimarine.h  aitowers.cpp  aitowers.h
(+392 files in other folders)
