
gradir = $(datadir)/signus

gra_DATA = graphics-cs.dat

graphics-cs.dat:
	rm -f $@
	$(MAKEDAT) $@ $(srcdir)/bitmaps/*

clean-local:
	rm -f graphics-cs.dat



screendir = $(datadir)/signus/screens-cs

screen_DATA =        screens/mis1-name.jpg \
                     screens/mis2-name.jpg \
                     screens/mis3-name.jpg \
                     screens/mis4-name.jpg \
                     screens/mis5-name.jpg \
                     screens/mis6-name.jpg \
                     screens/mis7-name.jpg \
                     screens/mis8-name.jpg \
                     screens/mis9-name.jpg \
                     screens/mis10-name.jpg \
                     screens/mis11-name.jpg \
                     screens/mis12-name.jpg \
                     screens/mis13-name.jpg \
                     screens/mis14-name.jpg \
                     screens/mis15-name.jpg \
                     screens/mis16-name.jpg \
                     screens/mis17-name.jpg \
                     screens/mis18-name.jpg \
                     screens/mis19-name.jpg
