
speechdir = $(datadir)/signus/en/speech

speech_DATA = failed.ogg increas.ogg mis10in.ogg mis11a.ogg mis11in.ogg \
              mis12a.ogg mis12b.ogg mis12in.ogg mis13in.ogg mis14in.ogg \
              mis15a.ogg mis15in.ogg \
              mis16in.ogg mis17in.ogg mis18in.ogg mis19in.ogg mis1in.ogg \
              mis2in.ogg \
              mis3in.ogg mis4in.ogg mis5in.ogg mis6a.ogg mis6in.ogg mis7in.ogg \
              mis8in.ogg mis9in.ogg msg0.ogg msg1.ogg msg10.ogg msg11.ogg \
              msg2.ogg msg3.ogg msg4.ogg msg5.ogg msg6.ogg msg7.ogg msg8.ogg \
              msg9.ogg reammo.ogg refuel.ogg repair.ogg success.ogg
