
animsdir = $(datadir)/signus/$(VERSION)/nolang/anims

dist_anims_DATA = \
	flash.vvf \
	mis10in.vvf \
	mis11in.vvf \
	mis12in.vvf \
	mis13in.vvf \
	mis14in.vvf \
	mis15in.vvf \
	mis16in.vvf \
	mis17in.vvf \
	mis18in.vvf \
	mis19in.vvf \
	mis1in.vvf \
	mis2in.vvf \
	mis3in.vvf \
	mis4in.vvf \
	mis5in.vvf \
	mis6in.vvf \
	mis6x.vvf \
	mis7in.vvf \
	mis8in.vvf \
	mis9in.vvf \
	present1.vvf \
	present2.vvf \
	present3.vvf \
	unit1.vvf \
	unit10.vvf \
	unit11.vvf \
	unit12.vvf \
	unit13.vvf \
	unit14.vvf \
	unit15.vvf \
	unit16.vvf \
	unit17.vvf \
	unit18.vvf \
	unit19.vvf \
	unit2.vvf \
	unit20.vvf \
	unit21.vvf \
	unit22.vvf \
	unit23.vvf \
	unit24.vvf \
	unit25.vvf \
	unit26.vvf \
	unit27.vvf \
	unit28.vvf \
	unit29.vvf \
	unit3.vvf \
	unit30.vvf \
	unit31.vvf \
	unit32.vvf \
	unit33.vvf \
	unit34.vvf \
	unit35.vvf \
	unit36.vvf \
	unit37.vvf \
	unit38.vvf \
	unit39.vvf \
	unit4.vvf \
	unit40.vvf \
	unit41.vvf \
	unit42.vvf \
	unit43.vvf \
	unit44.vvf \
	unit45.vvf \
	unit5.vvf \
	unit50.vvf \
	unit51.vvf \
	unit52.vvf \
	unit53.vvf \
	unit54.vvf \
	unit56.vvf \
	unit57.vvf \
	unit58.vvf \
	unit6.vvf \
	unit7.vvf \
	unit8.vvf \
	unit9.vvf
