
musdir = $(datadir)/signus/nolang/music

mus_DATA = artephact_war.s3m \
           belligerent_bacteria.s3m \
           cophhee_has_chilled_out.s3m \
           dont_phall_asleep.s3m \
           drivin_across_the_time.s3m \
           esthreeem_illness.s3m \
           pattern_portrait.s3m \
           phirst_ITeous.s3m \
           phound_in_desert.s3m \
           project_M.s3m \
           rushing_snake.s3m \
           solution.s3m \
           the_battle.s3m \
           the_battle_timeophh_rmx.s3m \
           water_in_the_sky.s3m
