
sfxdir = $(datadir)/signus/sfx

sfx_DATA = 0.ogg button.ogg click.ogg click2.ogg dalekde2.ogg dalekdel.ogg \
           dalekkan.ogg double.ogg expl_a0.ogg expl_a1.ogg expl_a2.ogg \
           expl_a3.ogg expl_a4.ogg expl_a5.ogg expl_a6.ogg expl_a7.ogg expl_b0.ogg \
           expl_b1.ogg expl_b2.ogg expl_b3.ogg expl_b4.ogg expl_b5.ogg expl_b6.ogg \
           expl_b7.ogg flash.ogg gargan.ogg hlmina.ogg jeeeeep.ogg kolovy1.ogg \
           kolovy2.ogg kolovy3.ogg kulome2.ogg laedel.ogg lebom.ogg lebomp.ogg \
           leboms.ogg lehkan.ogg lehkana.ogg letadlo.ogg letadlop.ogg letadlos.ogg \
           lod.ogg lod1.ogg lod2.ogg lod4.ogg lod6.ogg lod7.ogg menu.ogg pletkan.ogg \
           ponorka.ogg prletdel.ogg prletkan.ogg prletkul.ogg raketa.ogg raketa_l.ogg \
           raketa_r.ogg samopal.ogg satan.ogg satan_vy.ogg select.ogg sndtest.ogg \
           sonic.ogg stiha.ogg stihap.ogg stihas.ogg tank.ogg tank_l.ogg tank_s.ogg \
           tank_ss.ogg tank_sx.ogg tebom.ogg tebomp.ogg teboms.ogg tezkan.ogg \
           tezkana.ogg tezkul.ogg tezkula.ogg torpedo.ogg torpedo2.ogg typeon.ogg \
           typeon2.ogg vlak.ogg vlak1.ogg vlak2.ogg vlak3.ogg vrtulnik.ogg \
           vrtulnip.ogg vrtulnis.ogg vysu.ogg vznas.ogg vznas2.ogg \
           wpnclick.ogg zasu.ogg zavora.ogg
